commit on "main"

--- a/HW5 (2).ipynb
+++ b/HW5 (2).ipynb
@@ -38,13 +38,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thank you for consenting to participate.\n"
+     ]
+    }
+   ],
    "source": [
     "# -------------------- Solution ----------------------- #\n",
     "# Write your code here:\n",
-    "\n"
+    "def survey_consent():\n",
+    "    consent = input(\"Do you consent to participate in a survey (Yes or no)? \")\n",
+    "    if consent == \"Yes\":\n",
+    "        print(\"Thank you for consenting to participate.\")\n",
+    "    elif consent == \"No\":\n",
+    "        print(\"We respect your decision.\")\n",
+    "    else:\n",
+    "        print(\"Please answer 'Yes' or 'No'.\")\n",
+    "\n",
+    "num_respond = int(input(\"How many respondents are there? \"))\n",
+    "for i in range(num_respond):\n",
+    "    survey_consent()\n"
    ]
   },
   {
@@ -73,13 +92,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Java Junction\n",
+      "6a - 8p\n",
+      " Open drinks: 70\n",
+      " Open pastries: 30\n"
+     ]
+    }
+   ],
    "source": [
     "# -------------------- Solution ----------------------- #\n",
     "# Write your code here:\n",
-    "\n"
+    "def coffee_shop_info():\n",
+    "    print(f\"Java Junction\\n6a - 8p\")\n",
+    "    drinks_available()\n",
+    "    pastries_available()\n",
+    "\n",
+    "def drinks_available():\n",
+    "    drinks = int(input(\"How many open drinks? \"))\n",
+    "    print(f\" Open drinks: {drinks}\")\n",
+    "\n",
+    "def pastries_available():\n",
+    "    pastries = int(input(\"How many open pastries? \"))\n",
+    "    print(f\" Open pastries: {pastries}\")\n",
+    "\n",
+    "coffee_shop_info()"
    ]
   },
   {
@@ -132,13 +175,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finding 2 additional players...\n",
+      "Escape room is starting...\n"
+     ]
+    }
+   ],
    "source": [
     "# -------------------- Solution ----------------------- #\n",
     "# Write your code here:\n",
-    "\n"
+    "def escape_room():\n",
+    "    players = int(input(\"How many players? \"))\n",
+    "    add_players = 4 - players\n",
+    "    find_additional_players(add_players)\n",
+    "    print(\"Escape room is starting...\")\n",
+    "def find_additional_players(num):\n",
+    "    print(f\"Finding {num} additional players...\")\n",
+    "def team_building():\n",
+    "    activity = input(\"What is your desired activity? \")\n",
+    "    print(f\"Starting team building with {activity}\")\n",
+    "game_mode = input(\"What game mode would you like, 'er' or 'tb'? \")\n",
+    "if game_mode == 'er':\n",
+    "    escape_room()\n",
+    "elif game_mode == 'tb':\n",
+    "    team_building()\n",
+    "else:\n",
+    "    print(\"Choose 'er' or 'tb'\")"
    ]
   },
   {
@@ -164,13 +232,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rectangle area: 15.0\n"
+     ]
+    }
+   ],
    "source": [
     "# -------------------- Solution ----------------------- #\n",
     "# Write your code here:\n",
-    "\n"
+    "def print_rectangle_area():\n",
+    "    length = float(input(\"Length: \"))\n",
+    "    width = float(input(\"Width: \"))\n",
+    "    area = length * width\n",
+    "    print(f\"Rectangle area: {area:.1f}\")\n",
+    "print_rectangle_area()\n"
    ]
   },
   {
@@ -184,13 +265,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# -------------------- Solution ----------------------- #\n",
     "# Write your code here:\n",
-    "\n"
+    "def max_list():\n",
+    "    list = []\n",
+    "    n = int(input(\"How many numbers do you want in a list? \"))\n",
+    "    for i in range(0, n):\n",
+    "        num = int(input(\"Number? \"))\n",
+    "        list.append(num)\n",
+    "    return max(list)\n",
+    "max_list()\n"
    ]
   },
   {
@@ -222,12 +321,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Guest subscribed to Basic tier: Welcome !\n",
+      "Guest subscribed to Premium tier: Welcome Alex!\n",
+      "Kyle subscribed to Basic tier: Welcome Favorite person ever!\n"
+     ]
+    }
+   ],
    "source": [
     "# -------------------- Solution ----------------------- #\n",
-    "# Write your code here:\n"
+    "# Write your code here:\n",
+    "def subscribe(tier = \"Basic\", msg = \"\", name = \"Guest\"):\n",
+    "    print(f\"{name} subscribed to {tier} tier: Welcome {msg}!\")\n",
+    "\n",
+    "subscribe()\n",
+    "subscribe(\"Premium\", \"Alex\")\n",
+    "subscribe(msg = \"Favorite person ever\", name = \"Kyle\")"
    ]
   }
  ],
